Moved some logic from webcam to app.jsx. Fixed a bug in backend that was cutting off audio.

--- a/react_app/src/App.css
+++ b/react_app/src/App.css
@@ -1,6 +1,4 @@
-:root{
-  margin-bottom:200px;
-}
+
 
 #rightContainer {
   padding-top: 40px;
